Make zeppelin & spark resources configurable via env.